src/components/Hero/Hero.module.css
.hero {
  max-width: 700px;
  margin: 4rem auto;
}

.hero_title {
  margin: 0.5rem auto;

  font-size: 3.2rem;
  text-align: center;
}

.hero_subtitle {
  margin: 1.5rem auto 4.5rem;

  font-size: 2.5rem;
  text-align: center;
}

.hero_description {
  font-size: 1.5rem;
}

